Modify Todo Django App Add register feature by UserCreationForm Add help feature by ModelForm Django Forms practice

--- a/Django_App/todo/todos/templates/todos/base.html
+++ b/Django_App/todo/todos/templates/todos/base.html
@@ -7,12 +7,14 @@
     
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <!-- Fontawesome CSS -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
     
-        <title>{% block title %}{% endblock %}</title>
+        <title>{% block title %}{% endblock %} - Wookterlist</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="{% url 'todos:home' %}">Todo App</a>
+          <a class="navbar-brand" href="{% url 'todos:home' %}">Wookterlist</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -25,13 +27,19 @@
                   <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'users:profile' %}">profile</a>
+                  <a class="nav-link" href="{% url 'users:profile' %}">Profile</a>
                 </li>
               {% else %}
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'users:login' %}">Login</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'users:register' %}">Register</a>
+                </li>
               {% endif %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'shouts:home' %}">Help</a>
+              </li>
             </ul>
           </div>
         </nav>
