--- a/Django_App/todo/todos/templates/todos/home.html
+++ b/Django_App/todo/todos/templates/todos/home.html
@@ -1,5 +1,51 @@
 {% extends 'todos/base.html' %}
 {% block title %}Home{% endblock %}
 {% block content %}
-  <h1>Todo App</h1>
+  <h1>Wookterlist</h1>
+  {% if user.is_authenticated %}
+    <form method="POST" class="form-inline mt-5">
+      {% csrf_token %}
+      <input type="text" name="content" class='form-control col-9 col-md-10 col-lg-11' required placeholder="Add to do"/>
+      <input type="submit" value="Submit" class='btn btn-outline-dark ml-auto'/>
+    </form>
+  {% else %}
+    <a href="{% url 'users:login' %}" class="btn btn-dark mt-4 mr-2">Login</a>
+    <a href="{% url 'users:register' %}" class="btn btn-outline-dark mt-4">Register</a>
+  {% endif %}
+  {% if user.todo_set.all %}
+    <div class="list-group mt-4">
+      {% for todo in user.todo_set.all reversed %}
+      {% if todo.completed %}
+        <div class="list-group-item list-group-item-secondary list-group-item-action d-flex align-items-center">
+      {% else %}
+        <div class="list-group-item list-group-item list-group-item-action d-flex align-items-center">
+      {% endif %} 
+          <form action="{% url 'todos:complete' todo.id %}" method="POST" class="d-inline">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-ouline-light">
+              <span>
+              {% if todo.completed %}
+                <i class="far fa-check-square"></i>
+              {% else %}
+                <i class="far fa-square"></i>
+              {% endif %}
+              </span>
+            </button>
+          </form>
+          <span>
+            {% if todo.completed %}<del>{{ todo.content }}</del>
+            {% else %}{{ todo.content }}
+            {% endif %}
+          </span>
+          <a href="{% url 'todos:edit' todo.id %}" class="btn btn-ouline-light ml-auto"><span><i class="fas fa-edit"></i></span></a>
+          <form action="{% url 'todos:delete' todo.id %}" method="POST" class="d-inline">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-ouline-light">
+              <span><i class="fas fa-times"></i></span>
+            </button>
+          </form>
+        </div>
+      {% endfor %}
+    </div>
+  {% endif %}
 {% endblock %}
