Modify Movie Django DB Design project 1. seed data load 2. add modelforms for Movie, Score model 3. data validation and create, update by modelform 4. modify templates for modelform

--- a/Django_App/movie_django_db_design/movies/templates/movies/base.html
+++ b/Django_App/movie_django_db_design/movies/templates/movies/base.html
@@ -8,9 +8,36 @@
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Movies - {% block title %}{% endblock %}</title>
+    <title>{% block title %}{% endblock %} - WookCha</title>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="{% url 'movies:movie_list' %}">WookCha</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <!-- loginout -->
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'movies:movie_new' %}">New-Movie</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+{% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-info alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    {% endfor %}
+{% endif %}
 <div class="container mt-5">
     {% block content %}
     {% endblock %}
