--- a/Django_App/movie_django_db_design/movies/templates/movies/list.html
+++ b/Django_App/movie_django_db_design/movies/templates/movies/list.html
@@ -1,9 +1,9 @@
 {% extends 'movies/base.html' %}
 {% block title %}
-    MovieList
+    Home
 {% endblock %}
 {% block content %}
-    <h1>Movie List</h1>
+    <h1>WookCha</h1>
     {% if movies %}
         <div class="row mt-3">
             {% for movie in movies %}
